# Optimizing-Our-Neural-Network-With-BLAS-and-OpenMP

./: CMakeLists.txt  README.md
include/neural/data/: mnist_dataloader.h
include/neural/layers/: layer.h  linear_layer.h  relu_layer.h
include/neural/math/: tensor.h  tensor_math.h
src/: linear_layer.cpp  mnist_dataloader.cpp  relu_layer.cpp  tensor.cpp  tensor_math.cpp
tests/: linear_layer_test.cpp  mnist_dataloader_test.cpp  relu_layer_test.cpp  tensor_math_test.cpp  tensor_test.cpp
tools/feedforward_neural_net/: main.cpp
